--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,12 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height:100%;
     width: 250px;
     padding: 10px 14px;
     background: var(--darker);
     transition: var(--tran-05);
+    z-index: 100;
 }
 .sidebar.close{
     width: 88px;
@@ -58,6 +59,7 @@ body{
     min-width: 60px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .sidebar li{
     height: 50px;
@@ -109,7 +111,7 @@ header .image-text .header-text{
     position: absolute;
     top: 50%;
     right: -25px;
-    transform: translateY(-50);
+    transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
     background: var(--gray);
@@ -118,9 +120,17 @@ header .image-text .header-text{
     border-radius: 50%;
     color: var(--light);
     font-size: 22px;
+    transition: var(--tran-03);
+}
+.sidebar.close header .toggle{
+    transform: translateY(-50%);
+}
+.sidebar .search-box{
+    margin-top: 35px;
 }
 .sidebar .search-box{
     background: var(--gray);
+    border-radius: 6px;
 }
 .search-box input{
     height:100%;
@@ -128,8 +138,11 @@ header .image-text .header-text{
     outline: none;
     border: none;
     border-radius: 6px;
+    font-size: 16px;
+    font-weight: 500;
     color: var(--light);
     background: var(--gray);
+
 }
 .sidebar li a{
     height: 100%;
@@ -143,14 +156,29 @@ header .image-text .header-text{
 .sidebar li a:hover{
     background: var(--darkbg);
 }
-/* .sidebar li a:hover .icon,
-.sidebar li a:hover .text{
-   color: var(--purple);
-} */
 .sidebar .menu-bar{
     height: calc(100% - 40px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.home {
+    position: relative;
+    height: 100vh;
+    left: 250px;
+    width: calc(100% - 250px);
+    /* background: red; */
+    transition: var(--tran-05);
+}
+.home .text{
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--pink);
+    padding: 8px 40px;
+}
+.sidebar.close ~ .home{
+    left:88px;
+    width: calc(100% - 88px);
 }
 
